# _PROJECTS_

Academic Notification System/: docker-compose.yml
Academic Notification System/backend/: Dockerfile  notification.proto  pyproject.toml
Academic Notification System/backend/app/: database.py  kafka_consumer.py  kafka_producer.py  main.py  models.py
Academic Notification System/frontend/: pyproject.toml
Academic Notification System/frontend/consumer/: Dockerfile  app.py  notification.proto  notification_pb2.py
Academic Notification System/frontend/producer/: Dockerfile  app.py
Academic Notification System/kong/: kong.yml
Academic_Notification_System_Description/: README.md
Recipe Fetcher/: compose.yml
Recipe Fetcher/backend/: Dockerfile  pyproject.toml
Recipe Fetcher/backend/backend/: main.py  settings.py
Recipe Fetcher/frontend/: Dockerfile  pyproject.toml
Recipe Fetcher/frontend/frontend/: main.py
Recipe_Fetcher_Description/: README.md
