[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
streamlit = "^1.35.0"
sqlmodel = "^0.0.18"
psycopg = "^3.1.19"
python-multipart = "^0.0.9"
email-validator = "^2.1.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.3.0"
pydantic = "^2.7.2"
emails = "^0.6"
databases = "^0.9.0"
requests = "^2.32.3"
starlette = "^0.37.2"
pydantic-settings = "^2.2.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
